test/invalid/missing_func_param_annotation.py
# Function parameter without type annotation
def add(x, y: int) -> int:
    return x + y

def main() -> None:
    print(add(1, 2))
